Added: /healthz endpoint
